--- a/src/07_DataBinding/DataBinding/app/src/main/res/layout/plain_activity.xml
+++ b/src/07_DataBinding/DataBinding/app/src/main/res/layout/plain_activity.xml
@@ -22,8 +22,8 @@
     <data>
 
         <variable
-            name="viewmodel"
-            type="com.example.android.databinding.basicsample.data.SimpleViewModelSolution"/>
+            name="viewModel"
+            type="com.example.android.databinding.basicsample.data.SimpleViewModel"/>
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -37,7 +37,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="128dp"
-            android:text="@{viewmodel.name}"
+            android:text="@{viewModel.name}"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -50,7 +50,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="128dp"
-            android:text="@{viewmodel.lastName}"
+            android:text="@{viewModel.lastName}"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -75,7 +75,7 @@
             android:id="@+id/likes"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{Integer.toString(viewmodel.likes)}"
+            android:text="@{Integer.toString(viewModel.likes)}"
             android:textAppearance="@style/TextAppearance.AppCompat.Title"
             app:layout_constraintBottom_toTopOf="@+id/like_button"
             app:layout_constraintEnd_toEndOf="@+id/likes_label"
@@ -90,7 +90,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:onClick="@{() -> viewmodel.onLike()}"
+            android:onClick="@{() -> viewModel.onLike()}"
             android:text="@string/like"
             app:layout_constraintBottom_toTopOf="@+id/progressBar"
             app:layout_constraintEnd_toEndOf="@+id/imageView"
