--- a/src/99_WildRiftMastery/app/src/main/res/layout/footer_activity.xml
+++ b/src/99_WildRiftMastery/app/src/main/res/layout/footer_activity.xml
@@ -15,29 +15,35 @@
         android:gravity="bottom">
 
 
-        <ImageView
+        <ImageButton
             android:id="@+id/aboutUs"
-            android:layout_width="69dp"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
             android:layout_marginLeft="5dp"
+            android:layout_marginRight="44dp"
+            android:backgroundTint="#00FFFFFF"
             android:scaleType="centerInside"
             app:srcCompat="@drawable/about_us" />
 
-        <ImageView
+        <ImageButton
             android:id="@+id/home"
-            android:layout_width="277dp"
-            android:layout_height="41dp"
+            android:layout_width="60dp"
+            android:layout_height="67dp"
             android:layout_gravity="center"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:backgroundTint="#00FFFFFF"
             android:scaleType="centerInside"
             app:srcCompat="@drawable/home" />
 
-        <ImageView
+        <ImageButton
             android:id="@+id/info"
-            android:layout_width="46dp"
+            android:layout_width="61dp"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
-            android:layout_marginRight="5dp"
+            android:layout_marginLeft="60dp"
+            android:backgroundTint="#00FFFFFF"
             android:scaleType="centerInside"
             app:srcCompat="@drawable/info" />
     </LinearLayout>
