--- a/src/99_WildRiftMastery/app/src/main/res/layout/home_activity.xml
+++ b/src/99_WildRiftMastery/app/src/main/res/layout/home_activity.xml
@@ -2,7 +2,7 @@
 <layout>
     <data>
         <variable
-            name="DataBinding"
+            name="dataBinding"
             type="ferry.julyo.wildriftmastery.DataBinding" />
     </data>
 
