--- a/src/10_RecyclerView/app/src/main/res/menu/menu_main.xml
+++ b/src/10_RecyclerView/app/src/main/res/menu/menu_main.xml
@@ -1,16 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="com.guillaumegonnet.recyclerviewrecipe.MainActivity">
+
     <item
-        android:id="@+id/action_list"
-        android:title="@string/list"
-        app:showAsAction="never"/>
-    <item
-        android:id="@+id/action_grid"
-        android:title="@string/grid"
-        app:showAsAction="never"/>
-    <item
-        android:id="@+id/action_cardview"
-        android:title="@string/with_cardview"
-        app:showAsAction="never"/>
+        android:id="@+id/action_settings"
+        android:orderInCategory="100"
+        android:title="@string/action_settings"
+        app:showAsAction="never" />
 </menu>
