--- a/src/10_RecyclerView/app/src/main/res/layout/activity_hero.xml
+++ b/src/10_RecyclerView/app/src/main/res/layout/activity_hero.xml
@@ -6,11 +6,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
-    android:layout_marginLeft="25dp">
+    android:layout_marginLeft="25dp"
+    android:background="@color/panelGelap">
 
     <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/panelAbu">
 
         <ImageView
             android:id="@+id/gbrHero"
@@ -36,8 +38,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
                 android:text="TextView"
-                android:textColor="#000000"
+                android:textColor="@color/text"
                 android:textSize="19dp"
+
                 />
         </LinearLayout>
     </RelativeLayout>>
