--- a/src/10_RecyclerView/app/src/main/res/values/colors.xml
+++ b/src/10_RecyclerView/app/src/main/res/values/colors.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#1C3D59</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimary">#717171</color>
+    <color name="colorPrimaryDark">#717171</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="bg">#DFDFDF</color>
+    <color name="background">#828282</color>
+    <color name="panelAbu">#717171</color>
+    <color name="panelGelap">#373737</color>
+    <color name="text">#E7E7E7</color>
 </resources>
