--- a/src/99_WildRiftMastery/app/src/main/res/layout/home_activity.xml
+++ b/src/99_WildRiftMastery/app/src/main/res/layout/home_activity.xml
@@ -36,7 +36,7 @@
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:layout_below="@id/header"
-            android:layout_marginTop="7dp"
+            android:layout_marginTop="15dp"
             android:background="@color/panelAbu"
             android:orientation="horizontal"
             android:id="@+id/champion"
@@ -55,7 +55,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Champion"
+                android:text="@string/champion"
                 android:layout_gravity="center"
                 android:textSize="33dp"
                 android:textColor="@color/text"
@@ -68,26 +68,26 @@
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:layout_below="@id/champion"
-            android:layout_marginTop="7dp"
+            android:layout_marginTop="15dp"
             android:background="@color/panelAbu"
             android:orientation="horizontal"
             android:id="@+id/item"
             >
 
             <ImageButton
-                android:id="@+id/btnItem"
-                android:layout_width="117dp"
+                android:id="@+id/btnInfo"
+                android:layout_width="70dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="50dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="70dp"
                 android:backgroundTint="#00FFFFFF"
                 android:scaleType="centerInside"
-                app:srcCompat="@drawable/item"></ImageButton>
+                app:srcCompat="@drawable/info"></ImageButton>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Item"
+                android:text="@string/info"
                 android:layout_gravity="center"
                 android:textSize="33dp"
                 android:textColor="@color/text"
@@ -99,14 +99,14 @@
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:layout_below="@id/item"
-            android:layout_marginTop="7dp"
+            android:layout_marginTop="15dp"
             android:background="@color/panelAbu"
             android:orientation="horizontal"
             android:id="@+id/voice"
             >
 
             <ImageButton
-                android:id="@+id/btnVoice"
+                android:id="@+id/btnAboutUs"
                 android:layout_width="117dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
@@ -114,57 +114,17 @@
                 android:layout_marginRight="50dp"
                 android:backgroundTint="#00FFFFFF"
                 android:scaleType="centerInside"
-                app:srcCompat="@drawable/sound"></ImageButton>
+                app:srcCompat="@drawable/about_us"></ImageButton>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Voice"
+                android:text="@string/about_us"
                 android:layout_gravity="center"
                 android:textSize="33dp"
                 android:textColor="@color/text"
                 ></TextView>
 
         </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="120dp"
-            android:layout_below="@id/voice"
-            android:layout_marginTop="7dp"
-            android:background="@color/panelAbu"
-            android:orientation="horizontal"
-            android:id="@+id/wallpapers"
-            >
-
-            <ImageButton
-                android:id="@+id/btnWall"
-                android:layout_width="117dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="left"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="50dp"
-                android:backgroundTint="#00FFFFFF"
-                android:scaleType="centerInside"
-                app:srcCompat="@drawable/wildrift"></ImageButton>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Item"
-                android:layout_gravity="center"
-                android:textSize="33dp"
-                android:textColor="@color/text"
-                ></TextView>
-
-        </LinearLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="bottom">
-
-            <include layout="@layout/footer_activity"></include>
-        </RelativeLayout>
-
     </RelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
