--- a/src/99_WildRiftMastery/app/src/main/res/values/colors.xml
+++ b/src/99_WildRiftMastery/app/src/main/res/values/colors.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="colorPrimary">#008577</color>
+    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorAccent">#D81B60</color>
     <color name="background">#828282</color>
     <color name="panelAbu">#717171</color>
     <color name="panelGelap">#373737</color>
