--- a/src/99_WildRiftMastery/app/src/main/res/layout/activity_champion.xml
+++ b/src/99_WildRiftMastery/app/src/main/res/layout/activity_champion.xml
@@ -14,6 +14,7 @@
         android:background="@color/text">
 
         <ImageButton
+            android:id="@+id/back"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:src="@drawable/arrow"
