--- a/src/99_WildRiftMastery/app/src/main/res/layout/activity_champion.xml
+++ b/src/99_WildRiftMastery/app/src/main/res/layout/activity_champion.xml
@@ -17,6 +17,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:src="@drawable/arrow"
+            android:onClick="onClickBack"
             android:backgroundTint="#00FFFFFF"
             android:scaleType="centerInside"/>
 
